force-app/main/default/objects/Message_Log__c/Message_Log__c.object-meta.xml
<CustomObject>
    <description>This object will store the SMS logs for the Twilio integration. (PVFSL-379)</description>
    <label>Message Log</label>
    <nameField>
        <displayFormat>SMS-{0000000}</displayFormat>
        <label>Message Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Message Logs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>