force-app/main/default/objects/Message_Log__c/fields/From__c.field-meta.xml
<CustomField>
    <fullName>From__c</fullName>
    <label>From</label>
    <required>true</required>
    <type>Phone</type>
</CustomField>