force-app/main/default/objects/Message_Log__c/fields/Service_Appointment__c.field-meta.xml
<CustomField>
    <fullName>Service_Appointment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Appointment</label>
    <referenceTo>ServiceAppointment</referenceTo>
    <relationshipLabel>Message Logs</relationshipLabel>
    <relationshipName>Message_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>