force-app/main/default/objects/Message_Log__c/fields/To__c.field-meta.xml
<CustomField>
    <fullName>To__c</fullName>
    <label>To</label>
    <required>true</required>
    <type>Phone</type>
</CustomField>