force-app/main/default/objects/Message_Log__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Body__c</columns>
    <columns>Message_Id__c</columns>
    <columns>Contact__c</columns>
    <columns>Status__c</columns>
    <columns>To__c</columns>
    <columns>Direction__c</columns>
    <columns>Sent_Date__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>