force-app/main/default/objects/Message_Log__c/listViews/Outbound.listView-meta.xml
<ListView>
    <fullName>Outbound</fullName>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <columns>Status__c</columns>
    <columns>Body__c</columns>
    <columns>Sent_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Direction__c</field>
        <operation>equals</operation>
        <value>Outbound</value>
    </filters>
    <label>Outbound</label>
</ListView>